Revision history for Perl application Lstu

0.24-0 ????-??-??

0.23-1 2021-04-??
	- Fix disabled URLs still showing in admin interface (#79)

0.23-0 2021-04-26
	- Update translations
	- Improve tests
	- Improve CI
	- Upgrade some dependencies

0.22-0 2019-11-08
	- Disable URLs instead of removing them (prevents spammers to reuse a
	  deleted shortened URL)
	- Slugify custom URLs and add a suffix (-2, -3…) if the custom URL is
	  already taken
	- Allow to search several IP addresses at once
	- New logo and update theme!
	- Now use https://weblate.framasoft.org/projects/lstu for translations

0.21-4 2018-12-17
	- Add a lockfile to GSB database update to prevent concurrent updates

0.21-3 2018-11-19
	- Fix Pg sessions and urls delete fonctions

0.21-2 2018-11-19
	- Fix URL removal in memcached from safebrowsingcheck and url commands

0.21-1 2018-10-17
	- Fix URL removal in memcached from safebrowsingcheck command

0.21-0 2018-10-17
	- Allow to delete URLs and ban IPs from safebrowsingcheck
	- Add ban CLI tool for banning and unbanning IP addresses

0.20-2 2018-10-07
	- Handle very long URLs

0.20-1 2018-09-20
	- Fix safebrowsingcheck CLI help message

0.20-0 2018-09-20
	- Docker port, thanks to Arnaud de Mouhy
	- Improve safebrowsingcheck CLI:
	  - displays creators' IP addresses + other URLs from thoses IPs
	  - allow to specify URLs to check
	  - allow to check URLs created <argument> seconds ago

0.19-3 2018-09-08
	- Update translations

0.19-2 2018-09-08
	- Improve GSB object creation and GSB DB update

0.19-1 2018-09-08
	- Update translations

0.19-0 2018-09-08
	- Allow to use Google Safe Browsing database to check if the URLs are harmless
	  It uses a local copy of the GSB DB, so Google won't see the URLs to shorten
	- safebrowsingcheck CLI to check all the URLs in the database against GSB DB.
	  usage: carton exec script/lstu safebrowsingcheck
	- Fix bugs (#45)

0.18-1 2018-08-21
	- Update url CLI help message

0.18-0 2018-08-20