@@ -4,6 +4,7 @@ Revision history for Perl application Lstu
 
 0.23-1 2021-04-??
 	- Fix disabled URLs still showing in admin interface (#79)
+	- Make a distinction between inexistant and disabled URLs
 
 0.23-0 2021-04-26
 	- Update translations
